# focus

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: heat_equation.py
focus/: controls.py
focus/equations/pde1D/: __init__.py  base.py  heat_equation.py
focus/functionals/: base.py  loss.py
focus/optimizers/: base.py  tao.py
focus/pdes/1D/: base.py  heat_equation.py
focus/solvers/: base.py  heat_equation.py
focus/utils/: __init__.py  input_utils.py  lib_utils.py  output_utils.py  petsc_utils.py
focus/windowing/: __init__.py  base.py  fixed_window.py  windowing.py
tests/: test_controls.py  test_outputs.py  test_parametrised_rf.py  test_pde_setup.py  test_windowing.py
