[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus"
version = "0.1.0"
description = "Firedrake-based tools for optimal control and uncertainty quantification"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Divij Ghose"}
]
dependencies = [
    "pyadjoint-ad @ git+https://github.com/divijghose/pyadjoint.git@parametrised_reduced_functional",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["focus*"]
